[package]
name = "cch23-santa4586"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
image = "0.24.7"
shuttle-persist = "0.35.0"
ulid = "1.1.0"
uuid = "1.6.1"
chrono = { version = "0.4.31", features = ["std"] }
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
sha256 = "1.4.0"
regex = "1.10.2"
rocket_ws = "0.1.0"
tar = "0.4.40"
tempfile = "3.8.1"
git2 = "0.18.1"
